Fixed horizontal sizing of graphs on small screens. Updated globe image for faster loading times.

--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -241,40 +241,30 @@
   max-height: 30vw;
   align-items: center;
 }
+
 .graph-grid-small {
+  box-sizing: border-box;
+  min-width: 0;
   position: relative;
   display: none;
   width: 100%;
-  font-size: 1vw;
-  font-weight: 600;
+  font-size: 2vw;
+  font-weight: 500;
   color: rgb(187, 155, 49);
-  grid-template-columns: repeat(1, 1fr);
-  column-gap: 4px;
-  row-gap: 20px;
   margin: auto;
-  margin-top: 1%;
-  margin-bottom: 2%;
+  text-align: center;
   justify-items: center;
   align-items: center;
 }
 
 @media screen and (max-width: 1000px) {
   .graph-grid {
-    display: grid; /*Change to none when fixed*/
+    display: none; /*Change to none when fixed*/
   }
 
   .graph-grid-small {
-    display: none; /*Change when small fixed.*/
+    display: inline-block; /*Change when small fixed.*/
   }
-}
-
-.add-column {
-  position: relative;
-  font-size: 2vw;
-  font-weight: 600;
-  color: rgb(227, 255, 232);
-  align-items:start;
-  height: 2.1vw
 }
 
 .chart, .chart-bar, .chart-areabump, .chart-chord, .chart-choropleth, .chart-treemap, .chart-pie, .chart-funnel {
